tests/parser/invalid/016-def-native-with-body.man
def native main()
    foo()
end
